@@ -1,5 +1,7 @@
 10/11/25:
 
+- Add subtotal calculation and display to Cart
+- Fix tab spacing issues in App
 - Update Cart to use same quantity update functions as Items
 - Lift useEffect API fetch to App
 - Lift handleQuantityChange, handleIncrement, handleDecrement, handleManualChange, and addCart to App
